<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_or_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_account_box_or_24dp"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_settings_or_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_help_outline_or_24dp"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_or_24dp"
            android:title="@string/menu_feedback" />
    </group>

    <item android:title="Communicate" android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:visible="false"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:visible="false"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
