<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.livefeed.LiveFeed">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >

        <TextView
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:text="@string/live_feed"
            android:textAllCaps="true"
            android:fontFamily="@font/raleway_semibold"
            android:textSize="20sp"
            />

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sample_video_live_feed_height"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/video_bg" />

    <TextView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/imageView"
        android:id="@+id/textViewLiveUpdates"
        android:textColor="@color/colorBlack"
        android:text="@string/live_updates"
        android:gravity="center"
        android:fontFamily="@font/raleway_semibold"
        android:textSize="@dimen/live_updates_txt_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/feedRV"
        android:layout_below="@+id/textViewLiveUpdates"
        tools:listitem="@layout/fragment_item_live_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sendAlert"
            android:visibility="gone"
            android:text="@string/send_alert"
            android:textColor="@color/colorBlack"
            android:elevation="5dp"
            android:fontFamily="@font/raleway_semibold"
            android:background="@drawable/done_button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>



</RelativeLayout>